--- a/paper/method.tex
+++ b/paper/method.tex
@@ -56,6 +56,18 @@ to approximate the division between single stars and visual binaries.
 We removed all stars above this line from the sample.
 We removed subgiants by eliminating stars brighter than 6th magnitude in
 \gaia\ G-band from the sample.
+\begin{figure}
+  \caption{
+Dereddened main sequence stars with \mct\ rotation periods on the \gaia\ CMD
+    with visual binaries removed.  Points are colored by their gyrochronal
+    age, according to the
+    \citet{angus2019} gyrochronology relation.
+    A general age gradient is visible across the main sequence.
+}
+  \centering
+    \includegraphics[width=1\textwidth]{age_gradient}
+\label{fig:age_gradient}
+\end{figure}
 
 We removed stars with negative parallaxes and parallax signal-to-noise ratios
 below 10 from the sample.
