--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -445,7 +445,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{angus2019,
-       author = {{Angus}, Ruth},
+       author = {{Angus {\it et al.}}, Ruth},
         title = "{Towards precise stellar ages: combining isochrone fitting
             with empirical gyrochronology}",
       journal = {\aj},
