--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,41 +1,45 @@
 % Word limit: 250
 
-Due to a lack of precise ages for old stars with measured rotation periods,
-the rotational evolution of FGKM dwarfs is still mostly unconstrained after
-around 2-3 billion years.
+Due to a lack of precise ages and rotation periods for old main-sequence
+stars, the rotational evolution of FGKM dwarfs is mostly unconstrained
+after around 2-3 billion years.
 % This limit is set by the oldest open clusters whose members have precise light
 % curves, and therefore photometric rotation periods.
 Recent evidence suggests that the relationship between rotation period and
-color, temperature, and mass does not remain constant over large timescales,
+color/temperature/mass does not remain constant over large timescales,
 contradicting the long-held assumption that underlies many gyrochronology
 relations.
 % For example, old clusters appear to have a flatter relationship between
 % rotation period and color than young clusters.
-In this work we use the kinematic ages of star populations to reveal the
-evolving relationship between rotation period and effective temperature.
-Not only does the period-color relation change over time, its slope appears to
-{\it invert}: at young ages early K stars rotate more rapidly than late K
-stars, but at old ages they rotate more rapidly.
-% Although the gyrochronology relations fail to correctly predict the ages of
-% old cool stars, we show that gyrochronology accurately predicts the ages of
-% early K dwarfs, and young K dwarfs of all temperatures and those ages are
-% consistent with ages predicted from age-velocity dispersion relations.
-We find that the ages of field stars with measured rotation periods do not
-exceed 4-6 Gyrs, resolving a long-standing degeneracy between age and magnetic
-braking efficiency.
-% It was previously unknown whether the upper-limit of the stellar rotation
-% period distribution was created by a ceasura of magnetic braking (\ie old
-% stars do not rotate more slowly after a critical age) or an inability to
-% measure rotation periods for old stars.
-% We show that the lack of long rotation periods is caused by enhanced
-% measurement difficulty.
-We also show that stars rotating just below the rotation period gap are
-dynamically young, ruling out the possibility that the rotation period gap is
-caused by incorrect period measurements or binary companions.
-% Finally, we suggest that this gap may mark a critical point in the rotation
-% period evolution of K dwarfs.
-The main result of this paper could be produced by either an evolving
-period-color relationship {\it or} mass-dependent dynamical heating.
-Although we provide some evidence to suggest that the former effect is
-dominant, we cannot be sure and therefore caution that the results presented
-here are subject to this caveat.
+In this work we use the kinematic ages of populations of K dwarfs to reveal
+the evolving relationship between rotation period and effective temperature.
+We find that groups of stars, selected to be the same age, do {\it not} have
+the same velocity dispersion at all temperatures; cooler stars have greater
+velocity dispersions than hotter stars.
+Two different scenarios could be responsible for producing this observation:
+either the rotation period-color relation changes over time, or stars of
+different masses experience different rates of dynamical heating.
+We show however, that if mass-dependent heating is responsible, the
+differential heating rate is not constant over logarithmic time intervals
+which implies that different heating processes must be acting before and after
+ages of around 1 Gyr.
+Perhaps a more likely scenario is that the relation between rotation period
+and color changes over time, undergoing a particularly sharp transition at
+around 1 Gyr.
+If we assume that mass-dependent heating does not affect the data, our results
+indicate that the slope of the period-color relation actually {\it inverts}:
+at young ages early K stars rotate more rapidly than late K stars, but beyond
+$\sim$ 2 Gyr they rotate more slowly.
+% (similar to the age of the rotation gap and the 1.1 Gyr NGC 6811
+% cluster, shown to have a different period-color relation to Praesepe).
+% We find that the ages of field stars with measured rotation periods do not
+% exceed 4-6 Gyrs, resolving a long-standing degeneracy between age and magnetic
+% braking efficiency.
+% We also show that stars rotating just below the rotation period gap are
+% dynamically young, ruling out the possibility that the rotation period gap is
+% caused by incorrect period measurements or binary companions.
+% The main result of this paper could be produced by either an evolving
+% period-color relationship {\it or} mass-dependent dynamical heating.
+% Although we provide some evidence to suggest that the former effect is
+% dominant, we cannot be sure and therefore caution that the results presented
+% here are subject to this caveat.
