--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -488,3 +488,117 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{yu2018,
+       author = {{Yu}, Jincheng and {Liu}, Chao},
+        title = "{The age-velocity dispersion relation of the Galactic discs from LAMOST-Gaia data}",
+      journal = {\mnras},
+     keywords = {Galaxy: disc, Galaxy: evolution, Galaxy: kinematics and dynamics, solar neighbourhood, Astrophysics - Astrophysics of Galaxies},
+         year = "2018",
+        month = "Mar",
+       volume = {475},
+       number = {1},
+        pages = {1093-1103},
+          doi = {10.1093/mnras/stx3204},
+archivePrefix = {arXiv},
+       eprint = {1712.03965},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.475.1093Y},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{aumer2009,
+   author = {{Aumer}, M. and {Binney}, J.~J.},
+    title = "{Kinematics and history of the solar neighbourhood revisited}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0905.2512},
+ keywords = {stars: kinematics , Galaxy: kinematics and dynamics , solar neighbourhood},
+     year = 2009,
+    month = aug,
+   volume = 397,
+    pages = {1286-1301},
+      doi = {10.1111/j.1365-2966.2009.15053.x},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2009MNRAS.397.1286A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{aumer2016,
+       author = {{Aumer}, Michael and {Binney}, James and {Sch{\"o}nrich}, Ralph},
+        title = "{Age-velocity dispersion relations and heating histories in disc galaxies}",
+      journal = {\mnras},
+     keywords = {methods: numerical, Galaxy: disc, Galaxy: kinematics and dynamics, galaxies: evolution, galaxies: spiral, Astrophysics - Astrophysics of Galaxies},
+         year = "2016",
+        month = "Oct",
+       volume = {462},
+       number = {2},
+        pages = {1697-1713},
+          doi = {10.1093/mnras/stw1639},
+archivePrefix = {arXiv},
+       eprint = {1607.01972},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016MNRAS.462.1697A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{rebull2017,
+   author = {{Rebull}, L.~M. and {Stauffer}, J.~R. and {Hillenbrand}, L.~A. and
+	{Cody}, A.~M. and {Bouvier}, J. and {Soderblom}, D.~R. and {Pinsonneault}, M. and
+	{Hebb}, L.},
+    title = "{Rotation of Late-type Stars in Praesepe with K2}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1703.07031},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: rotation, stars: variables: general},
+     year = 2017,
+    month = apr,
+   volume = 839,
+      eid = {92},
+    pages = {92},
+      doi = {10.3847/1538-4357/aa6aa4},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...839...92R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{douglas2017,
+   author = {{Douglas}, S.~T. and {Ag{\"u}eros}, M.~A. and {Covey}, K.~R. and
+	{Kraus}, A.},
+    title = "{Poking the Beehive from Space: K2 Rotation Periods for Praesepe}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1704.04507},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: evolution, stars: late-type, stars: rotation},
+     year = 2017,
+    month = jun,
+   volume = 842,
+      eid = {83},
+    pages = {83},
+      doi = {10.3847/1538-4357/aa6e52},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...842...83D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{douglas2016,
+       author = {{Douglas}, S.~T. and {Ag{\"u}eros}, M.~A. and {Covey}, K.~R. and
+        {Cargile}, P.~A. and {Barclay}, T. and {Cody}, A. and {Howell},
+        S.~B. and {Kopytova}, T.},
+        title = "{K2 Rotation Periods for Low-mass Hyads and the Implications for
+        Gyrochronology}",
+      journal = {\apj},
+     keywords = {open clusters and associations: individual: Hyades, stars: evolution,
+        stars: late-type, stars: low-mass, stars: rotation, Astrophysics
+        - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = May,
+       volume = {822},
+          eid = {47},
+        pages = {47},
+          doi = {10.3847/0004-637X/822/1/47},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/#abs/2016ApJ...822...47D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
