--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -52,8 +52,8 @@ $v_z$).
 Young stars have relatively small vertical velocities, but gain momentum in
 the vertical direction over time.
 Although the cause of orbital heating is not well understood, interactions
-with giant molecular clouds are thought to play an important role
-\racomment{(citations)}.
+with giant molecular clouds and spiral arms are thought to play an important
+role \racomment{(citations)}.
 Although the velocity of any individual star will only provide a weak age
 constraint, the velocity dispersion of a group of stars can indicate whether,
 on average, that group is old or young relative to other groups.
@@ -69,7 +69,6 @@ ages with kinematic ones.
 However, regardless of the exact relation between velocity dispersion and
 stellar age, it is expected to be a monotonic relationship, therefore velocity
 dispersion can be used effectively to {\it rank} groups of stars by age.
-\racomment{Say some words here to prime the reader for the upcoming caveats.}
 
 % Vertical {\it actions} are better age indicators than velocities, because
 % actions are calculated by integrating angular momentum over the Milky Way's
@@ -79,9 +78,10 @@ dispersion can be used effectively to {\it rank} groups of stars by age.
 % in this sense, {\it actions} are the natural quantities to use as age proxies.
 Vertical action is a better age indicator than vertical velocity, however both
 vertical action ($J_z$) and vertical velocity (\vz/W) can only be calculated
-with full 6-dimensional position and velocity information, yet most stars with
-measured rotation periods do not have radial velocity measurements because
-they are relatively faint \kepler\ targets ($\sim$11th-18th magnitudes).
+with full 6-dimensional position and velocity information.
+Unfortunately, most stars with measured rotation periods do not have radial
+velocity (RV) measurements because they are relatively faint \kepler\ targets
+($\sim$11th-18th magnitudes).
 For this reason, we used an alternative age proxy: velocity in the direction
 of galactic latitude, \vb.
 The \kepler\ field is positioned at low galactic latitude (b=5-20\degrees), so
@@ -89,10 +89,9 @@ The \kepler\ field is positioned at low galactic latitude (b=5-20\degrees), so
 
 % \subsection{The degeneracy between gyrochronology and mass-dependent heating}
 
-In this paper we test the \citet{angus2019} gyrochronology relation, which
-was calibrated using the period-color relation of Praesepe and the period-age
-relation of Praesepe and the Sun.
-It is calibrated to \gaia\ \gcolor\ color.
+In this paper, we tested the \citet{angus2019} gyrochronology relation, which
+was calibrated using the period-color relation of Praesepe (in \gaia\ \gcolor\
+color) and the period-age relation of Praesepe and the Sun.
 % This relation was calibrated by fitting a 5th-order polynomial to the relation
 % between (log) rotation period and (log) \gaia\ \gcolor\ color for around 800
 % members of the Praesepe cluster, and a straight line in (log) age to Praesepe
@@ -102,7 +101,7 @@ relation was tested on NGC 6819, a 2.5 Gyr cluster, for which it predicted
 accurate ages.
 In addition, the period-color relation of Praesepe is nearly identical to the
 period-color relation of the Hyades, a cluster of around the same age: $\sim$
-650 years \citep{douglas2019}.
+650 years \citep{douglas2016, douglas2017, rebull2017}.
 However, this relation does {\it not} provide a good fit to NGC 6811, a 1.1
 Gyr cluster \citep{curtis2019}.
 The G dwarfs in NGC 6811 rotate at the same rate as the K dwarfs and it
