--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -36,6 +36,7 @@
 \newcommand{\Gaia}{{\it Gaia}}
 \newcommand{\gaia}{{\it Gaia}}
 \newcommand{\panstarrs}{{\it PanSTARRS}}
+\newcommand{\LAMOST}{{\it LAMOST}}
 
 \newcommand{\Teff}{$T_{\mathrm{eff}}$}
 \newcommand{\teff}{$T_{\mathrm{eff}}$}
@@ -51,9 +52,11 @@
 \newcommand{\dnu}{$\Delta \nu$}
 \newcommand{\numax}{$\nu_{\mathrm{max}}$}
 \newcommand{\degrees}{$^\circ$}
-\newcommand{\vz}{$v_z$}
-\newcommand{\vb}{$v_b$}
+\newcommand{\vz}{$v_{\bf z}$}
+\newcommand{\vb}{$v_{\bf b}$}
 \newcommand{\kms}{$kms^{-1}$}
+\newcommand{\sigmavb}{$\sigma_{v{\bf b}}$}
+\newcommand{\sigmavz}{$\sigma_{v{\bf z}}$}
 
 % \newcommand{\nsim_stars}{841}
 
