--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,28 +1,37 @@
 \section{Conclusion}
 
-We examined the rotation period-color component of the \citep{angus2019}
-gyrochronology relation and found that groups of stars, selected to be the
-same age using this relation, do {\it not} have the same velocity dispersion
-across all temperatures.
+We found that groups of K dwarfs, selected to be coeval using the
+\citet{angus2019} gyrochronology relation, do {\it not} have the same velocity
+dispersion across all temperatures.
 This indicates that {\it either} the \citep{angus2019} period-color relation
 is wrong, {\it or} that mass-dependent dynamical heating is affecting this
 data set.
-We found that the exponent of the AVR relation, calibrated using F and G stars
-in the Geneva-Copenhagen Survey, with ages estimated via isochrone-fitting, is
-greater than the exponent we find for the AVR relation fit to the most massive
-K dwarfs in our sample.
-Since mass-dependent dynamical heating should lead to a larger AVR exponent
-for lower-mass stars, this suggests that mass-dependent heating is not
-strongly affecting our sample.
-However, we used velocity in galactic latitude, \vb, not \vz, to calculate our
-AVRs, and while \vb\ is a close approximation to \vz\ at low galactic
-latitudes, it is not identical.
-Indeed, the \vz\ AVR should be larger than the \vb\ AVR, since orbital
-scattering is expected to have a strongest effect in the vertical direction.
-For the 290 stars in our sample with \gaia\ radial velocity measurements we
-measured the \vz\ AVR exponent to be larger than the \vb\ AVR exponent.
+We presented three pieces of evidence that suggest mass-dependent heating
+cannot be responsible for all of the increasing velocity dispersion.
 
-For now, we cannot draw a strong conclusion regarding the origin of the
-observed increased velocity dispersion for stars of lower masses since either
-an incorrectly calibrated gyrochronology relation, or mass-dependent dynamical
-heating could be the cause.
+\begin{itemize}
+
+\item{No strong evidence for mass-dependent heating has been found among M, L
+and T-type stars.
+These low-mass stars live longer than the current age of the Universe and
+therefore do not suffer from a mass-age degeneracy \citep{faherty2009}.}
+
+\item{Literature measurements of the (\vz) AVR exponent are slightly higher
+than the value measured from our data set, but calculated using more massive
+stars.
+Mass-dependent dynamical heating should however produce a {\it smaller} AVR
+exponent for higher-mass stars.
+We acknowledge that the stars in the \mct\ sample, analyzed in this work, are
+subject to different selection biases than those used to calculate AVRs in the
+literature \citep{holmberg2009, aumer2009, yu2018}, so drawing direct
+comparisons between them is not a robust test.}
+
+\item{The differences in the (\vb) AVR exponent between the hottest and
+coolest K dwarfs in our sample are extremely large, spanning values between
+0.3 and 0.65, yet the difference in mass is less than a factor of two.
+Such a large spread in AVR exponents cannot be explained by mass-dependent
+heating alone.}
+
+\end{itemize}
+
+\racomment{Words about the significance of an inverted period-color relation.}
