--- a/paper/results.tex
+++ b/paper/results.tex
@@ -80,29 +80,28 @@ However, mass-dependent orbital heating has not yet been unambiguously
 observed in the galactic disk because of the strong anti-correlation between
 stellar mass and stellar age.
 Less massive stars do indeed have larger velocity dispersions, however they
-are also older on average.
+are also older on average \racomment{(citations)}.
 This mass-age degeneracy is highly reduced in M dwarfs because their
 main-sequence lifetimes are longer than the age of the Universe, however no
 evidence for mass-dependent heating has been detected in these low mass stars
 \citep{faherty2009}.
 
-To investigate further, we calculated the exponent of the AVR for each
+The \vb\ AVR is not directly comparable to the \vz\ AVR, so, to draw a
+comparison with results from the literature, we calculated a \vz\ AVR for
+the subset of 290 stars in our sample with \gaia\ RVs.
+We measured an AVR exponent of 0.47 $\pm$ 0.1, which falls within the range of
+values (0.45-0.53) reported from measurements of F and G stars in the Solar
+neighborhood \citep{holmberg2009, aumer2009, aumer2016}.
+It is a little lower than the values of 0.56 $\pm$ 0.14 (for low-z) and 0.51
+$\pm$ 0.15 (for high-z stars), calculated using \LAMOST\ \racomment{(LAMOST
+citation)} K giants \citep{yu2018}.
+K giants are more massive than K dwarfs \racomment{(how much more massive?)},
+so this slightly higher value contradicts the mass-dependent heating
+hypothesis.
+\racomment{Add some words about selection functions...}
+
+To investigate further, we calculated the exponent of the (\vb) AVR for each
 temperature bin in figure \ref{fig:age_cut}.
-If mass-dependent heating is strongly affecting our data, the exponent of the
-AVR should increase with decreasing effective temperature, \ie\ the heating
-rate should be greater for lower-mass stars.
-Figure \ref{fig:AVR_exponent} shows the AVR exponent does indeed increase with
-decreasing effective temperature, however, the AVR exponent calculated using
-more massive stars from the Geneva Copenhagen Survey (GCS)
-\citep{holmberg2009} is also shown on this plot as a dashed horizontal line.
-Most GCS stars are F and G type: 1-3 times more massive than the K dwarfs used
-in our study.
-If mass-dependent orbital heating is the main cause the rise in velocity
-dispersion with decreasing \teff\ seen in figure \ref{fig:age_cut}, then the
-AVR exponent of the more massive GCS stars should fall {\it below} the AVR
-exponent for the most massive stars in our sample.
-In other words, the dynamical heating rate should be lowest for the highest
-mass stars and highest for the lowest mass stars.
 \begin{figure}
   \caption{
 The exponent of the AVR as a function of effective temperature.
@@ -113,76 +112,93 @@ The exponent of the AVR as a function of effective temperature.
     \includegraphics[width=1\textwidth]{AVR_exponent}
 \label{fig:AVR_exponent}
 \end{figure}
-% nordstrom2004, jorgensen2005,
-These AVR exponents were calculated with different populations of stars,
-subject to different selection effects, so directly comparing them comes with
-some risk.
-The most important difference is that the GCS AVR is calculated using \vz,
-however our AVRs are calculated using \vb\ since most stars in our sample do
-not have radial velocities.
-The median galactic latitude of these \kepler\ stars is 12.3\degrees, with
-latitudes ranging from 5.5\degrees\ to 21.4\degrees, so \vb\ is a relatively
-close approximation to \vz.
-Only 290 out of the 6820 stars in our sample, plotted in color in figure
-\ref{fig:age_cut}, have \gaia\ radial velocities, however we used the ones
-that do to compare the \vz\ AVR to the \vb\ AVR, across all temperatures
-between 3500 and 5000 K.
-For stars with gyrochronal ages between 0.5 and 4.5 Gyr, we measured a \vz\
-AVR exponent of 0.519 $\pm$ ... and a \vb\ AVR exponent of 0.514 $\pm$... .
-The similarity of these two AVR exponents suggests that directly comparing
-these two quantities {\it may} be a reasonable approach.
-For now, given the large difference between the (\vz) AVR exponent of the GCS
-sample and the (\vb) AVR exponent of the hottest stars in our sample, we
-assume that the increased velocity dispersion at cooler temperatures is mostly
-caused by incorrect age-grouping due to an incorrect period-color relation at
-old ages, and that any mass-dependent heating, while it may contribute at a
-low level to this result, is not the dominant driver.
-However, differentiating the effects of mass-dependent heating and the shape
-of the gyrochronology relations is certainly warranted in a follow-up study.
 
-The Praesepe-calibrated gyrochronology relation seems to accurately predict
-the relative ages of {\it young} field stars.
-This is shown by the consistent velocity dispersion of young stars as a
-function of temperature in figure \ref{fig:age_cut}.
+% If mass-dependent heating is strongly affecting our data, the exponent of the
+% AVR should increase with decreasing effective temperature, \ie\ the heating
+% rate should be greater for lower-mass stars.
+% Figure \ref{fig:AVR_exponent} shows the AVR exponent does indeed increase with
+% decreasing effective temperature, however, the AVR exponent calculated using
+% more massive stars from the Geneva Copenhagen Survey (GCS)
+% \citep{holmberg2009} is also shown on this plot as a dashed horizontal line.
+% Most GCS stars are F and G type: 1-3 times more massive than the K dwarfs used
+% in our study.
+% If mass-dependent orbital heating is the main cause the rise in velocity
+% dispersion with decreasing \teff\ seen in figure \ref{fig:age_cut}, then the
+% AVR exponent of the more massive GCS stars should fall {\it below} the AVR
+% exponent for the most massive stars in our sample.
+% In other words, the dynamical heating rate should be lowest for the highest
+% mass stars and highest for the lowest mass stars.
+% % nordstrom2004, jorgensen2005,
+% These AVR exponents were calculated with different populations of stars,
+% subject to different selection effects, so directly comparing them comes with
+% some risk.
+% The most important difference is that the GCS AVR is calculated using \vz,
+% however our AVRs are calculated using \vb\ since most stars in our sample do
+% not have radial velocities.
+% The median galactic latitude of these \kepler\ stars is 12.3\degrees, with
+% latitudes ranging from 5.5\degrees\ to 21.4\degrees, so \vb\ is a relatively
+% close approximation to \vz.
+% Only 290 out of the 6820 stars in our sample, plotted in color in figure
+% \ref{fig:age_cut}, have \gaia\ radial velocities, however we used the ones
+% that do to compare the \vz\ AVR to the \vb\ AVR, across all temperatures
+% between 3500 and 5000 K.
+% For stars with gyrochronal ages between 0.5 and 4.5 Gyr, we measured a \vz\
+% AVR exponent of 0.519 $\pm$ ... and a \vb\ AVR exponent of 0.514 $\pm$... .
+% The similarity of these two AVR exponents suggests that directly comparing
+% these two quantities {\it may} be a reasonable approach.
+% For now, given the large difference between the (\vz) AVR exponent of the GCS
+% sample and the (\vb) AVR exponent of the hottest stars in our sample, we
+% assume that the increased velocity dispersion at cooler temperatures is mostly
+% caused by incorrect age-grouping due to an incorrect period-color relation at
+% old ages, and that any mass-dependent heating, while it may contribute at a
+% low level to this result, is not the dominant driver.
+% However, differentiating the effects of mass-dependent heating and the shape
+% of the gyrochronology relations is certainly warranted in a follow-up study.
+% }
+
+The consistent velocity dispersion of young stars as a function of temperature
+in figure \ref{fig:age_cut} shows that the Praesepe-calibrated gyrochronology
+relation accurately predicts the relative ages of {\it young} field stars.
 To our knowledge, no gyrochronology relation has never been demonstrated to
 correctly predict ages (either relative or absolute) for such cool or such
 young field stars.
 This is not particularly remarkable however, since these young stars are a
 similar age to the Praesepe cluster, which was used to calibrate the
 period-color relation.
-Figure \ref{fig:age_comparison} shows the ages of star groups, predicted with
-the \citet{angus2019} gyrochronology relation, compared with the ages of star
-groups, predicted with the \citet{holmberg2009} AVR.
-\citet{holmberg2009} only provide an exponent (0.53), not an intercept, for the
-relation between logarithmic age (in Gyr) and logarithmic, \vz\ velocity
-dispersion (in \kms), so we fit the intercept to the mean \vb\ velocity
-dispersion across all temperatures, of our sample.
-\begin{figure}
-  \caption{
-      Ages predicted by the \citet{holmberg2009} \vz\ AVR, against ages
-    predicted by the \citet{angus2019} gyrochronology relation, for stars in
-    different temperature ranges.
-Points are colored by the effective temperature in the center of the \teff\
-bin.
-The dashed line shows the y=x relation.
-Predicted kinematic ages fan out over gyrochronal time, either because the AVR
-    is temperature-dependent or because the gyrochronology relations have an
-    age-dependent period-color relation.
-}
-  \centering
-    \includegraphics[width=1\textwidth]{age_comparison}
-\label{fig:age_comparison}
-\end{figure}
-Figure \ref{fig:age_comparison} shows a comparison between ages predicted by
-the \citet{holmberg2009} \vz\ AVR (using \vb\ as a proxy for \vz) and ages
-predicted by the \citet{angus2019} gyrochronology relation, for stars in
-different temperature ranges.
-The predicted kinematic ages fan out over gyrochronal time, either because the
-AVR is temperature-dependent or because the gyrochronology relations have an
-age-dependent period-color relation.
-Figure \ref{fig:age_comparion} also shows that the AVR seems to break down for
-the youngest age bin, 0.5 Gyr, which has a lower velocity dispersion than
-expected, given its age.
+
+% Figure \ref{fig:age_comparison} shows the ages of star groups, predicted with
+% the \citet{angus2019} gyrochronology relation, compared with the ages of star
+% groups, predicted with the \citet{holmberg2009} AVR.
+% \citet{holmberg2009} only provide an exponent (0.53), not an intercept, for the
+% relation between logarithmic age (in Gyr) and logarithmic, \vz\ velocity
+% dispersion (in \kms), so we fit the intercept to the mean \vb\ velocity
+% dispersion across all temperatures, of our sample.
+% \begin{figure}
+%   \caption{
+%       Ages predicted by the \citet{holmberg2009} \vz\ AVR, against ages
+%     predicted by the \citet{angus2019} gyrochronology relation, for stars in
+%     different temperature ranges.
+% Points are colored by the effective temperature in the center of the \teff\
+% bin.
+% The dashed line shows the y=x relation.
+% Predicted kinematic ages fan out over gyrochronal time, either because the AVR
+%     is temperature-dependent or because the gyrochronology relations have an
+%     age-dependent period-color relation.
+% }
+%   \centering
+%     \includegraphics[width=1\textwidth]{age_comparison}
+% \label{fig:age_comparison}
+% \end{figure}
+% Figure \ref{fig:age_comparison} shows a comparison between ages predicted by
+% the \citet{holmberg2009} \vz\ AVR (using \vb\ as a proxy for \vz) and ages
+% predicted by the \citet{angus2019} gyrochronology relation, for stars in
+% different temperature ranges.
+% The predicted kinematic ages fan out over gyrochronal time, either because the
+% AVR is temperature-dependent or because the gyrochronology relations have an
+% age-dependent period-color relation.
+% Figure \ref{fig:age_comparion} also suggests that dynamical heating does not
+% begin until after around ... Gyr:
+
 % Alternatively, the ages of these young stars could be under-predicted by
 % gyrochronology.
 % These young stars have similar rotation periods to the Praesepe cluster, which
@@ -201,10 +217,16 @@ expected, given its age.
 % that the {\it relative} age of these youngest stars are under-predicted by
 % kinematics or over-predicted by gyrochronology.
 
-We applied the same analysis described at the beginning of this section to
-groups of stars selected using rotation period groups, instead of age groups.
-The top panel of figure \ref{fig:period_cut} shows the \mct\ sample with
-stars in different period ranges plotted in different colors.
+For now, we assume that the rise in velocity dispersions at cooler effective
+temperatures is caused by an inaccurate period-color relation rather than
+mass-dependent dynamical heating.
+This assumption allows us to estimate what the shape of the period-color
+relations {\it should} be.
+Figure \ref{fig:age_cut} indicates that the period-color relation flattens
+out, so we applied the same analysis to groups of stars with similar rotation
+periods, equivalent to a completely flat period-color relation.
+The top panel of figure \ref{fig:period_cut} shows the \mct\ sample with stars
+in different period ranges plotted in different colors.
 The bottom panel shows the velocity dispersion of each group as a function of
 effective temperature.
 \begin{figure}
@@ -222,20 +244,23 @@ The velocity dispersion is more constant across effective temperatures for the
 \end{figure}
 Once again, the velocity dispersion increases with rotation period overall.
 For the most rapidly rotating groups of stars, velocity dispersion decreases
-with \teff.
-This is expected given the positively sloped period-color relation of Praesepe
-and other young clusters: late K dwarfs rotate more slowly than early K dwarfs
-of the same age.
-Between 15 and 25 day rotation periods, the temperature dependence of the
+with \teff\ as expected given the positively sloped period-color relation of
+Praesepe and other young clusters: late K dwarfs rotate more slowly than early
+K dwarfs of the same age.
+Between rotation periods of 15 and 25 days, the temperature dependence of the
 velocity dispersion starts to disappear, indicating that the period-color
 relation becomes flat: late K dwarfs rotate at the same rate as early K dwarfs
 of the same age.
 At long rotation periods, the velocity dispersion still increases with
-effective temperature, although the increase is much more modest than in
-figure \ref{fig:age_cut}.
-This suggests that the period-color relation may have a negative slope at old
-ages: late K dwarfs may rotate {\it more} rapidly than early K dwarfs.
+effective temperature, although the increase is much more modest compared to
+the oldest stars in figure \ref{fig:age_cut}.
+This suggests that rotation period may {\it decrease} with effective
+temperature, \ie\ late K dwarfs may rotate {\it more} rapidly than early K
+dwarfs.
 This would be a paradigm shift for gyrochronology, stellar spin-down rate is
 thought to be directly tied to magnetic field strength.
 The deeper convection zones of later type stars generate stronger magnetic
 fields which {\it should} lead to more efficient angular momentum loss.
+Unfortunately, we still cannot rule out the possibility that mass-dependent
+heating is acting on these stars which could be responsible for some, if not
+all, of the increased velocity dispersion at cooler effective temperatures.
