--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -126,5 +126,5 @@ approach to calibrating gyrochronology}
 \include{acknowledgements}
 
 \bibliographystyle{plainnat}
-\bibliography{refs.bib}
+\bibliography{bib.bib}
 \end{document}
