--- a/paper/results.tex
+++ b/paper/results.tex
@@ -104,14 +104,21 @@ To investigate further, we calculated the exponent of the (\vb) AVR for each
 temperature bin in figure \ref{fig:age_cut}.
 \begin{figure}
   \caption{
-The exponent of the AVR as a function of effective temperature.
-    The AVR exponent of \citet{holmberg2009}, calculated using a more massive
-    sample of stars, is shown as a horizontal dashed line.
+      The exponent of the (\vb) AVR as a function of effective temperature.
 }
   \centering
     \includegraphics[width=1\textwidth]{AVR_exponent}
 \label{fig:AVR_exponent}
 \end{figure}
+Figure \ref{fig:AVR_exponent} shows the significant rise the in AVR exponent
+as a function of effective temperature.
+The hottest stars in our sample (\teff\ = 4833-5000 K) have a (\vb) AVR
+exponent of 0.39 $\pm$ 0.02 and the coolest (\teff\ = 3500-3667 K) have an
+exponent of 0.74 $\pm$ 0.02.
+The masses of stars in our sample differ by less than a factor of two,
+so mass-dependent heating cannot be entirely responsible for this large spread
+in heating rates.
+\racomment{Need to look into this further.}
 
 % If mass-dependent heating is strongly affecting our data, the exponent of the
 % AVR should increase with decreasing effective temperature, \ie\ the heating
