--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,36 +1,43 @@
 \section{Conclusion}
 
-We found that groups of K dwarfs, selected to be coeval using the
-\citet{angus2019} gyrochronology relation, do {\it not} have the same velocity
+We found that old groups of K dwarfs selected to be coeval using the
+\citet{angus2019} gyrochronology relation do {\it not} have the same velocity
 dispersion across all temperatures.
-This indicates that {\it either} the \citep{angus2019} period-color relation
-is wrong, {\it or} that mass-dependent dynamical heating is affecting this
-data set.
+This indicates that either the \citep{angus2019} period-color relation is
+wrong, or that mass-dependent dynamical heating is affecting this data set.
 We presented three pieces of evidence that suggest mass-dependent heating
 cannot be responsible for all of the increasing velocity dispersion.
 
 \begin{itemize}
 
-\item{No strong evidence for mass-dependent heating has been found among M, L
+\item{
+        No strong evidence for mass-dependent heating has been found among M, L
 and T-type stars.
 These low-mass stars live longer than the current age of the Universe and
-therefore do not suffer from a mass-age degeneracy \citep{faherty2009}.}
+        therefore do not suffer from a mass-age degeneracy
+        \citep{faherty2009}.
+}
 
-\item{Literature measurements of the (\vz) AVR exponent are slightly higher
+\item{
+        Literature measurements of the (\vz) AVR exponent are slightly higher
 than the value measured from our data set, but calculated using more massive
 stars.
 Mass-dependent dynamical heating should however produce a {\it smaller} AVR
-exponent for higher-mass stars.
+        exponent for higher-mass stars.
 We acknowledge that the stars in the \mct\ sample, analyzed in this work, are
-subject to different selection biases than those used to calculate AVRs in the
-literature \citep{holmberg2009, aumer2009, yu2018}, so drawing direct
-comparisons between them is not a robust test.}
+        subject to different selection biases than those used to calculate
+        AVRs in the literature \citep{holmberg2009, aumer2009, yu2018}, so
+        drawing direct comparisons between them does not provide a reliable
+        test.
+}
 
-\item{The differences in the (\vb) AVR exponent between the hottest and
+\item{
+        The differences in the (\vb) AVR exponent between the hottest and
 coolest K dwarfs in our sample are extremely large, spanning values between
-0.3 and 0.65, yet the difference in mass is less than a factor of two.
+0.4 and 0.75, yet the difference in mass is less than a factor of two.
 Such a large spread in AVR exponents cannot be explained by mass-dependent
-heating alone.}
+        heating alone.
+}
 
 \end{itemize}
 
