--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -52,7 +52,7 @@ $v_z$).
 Young stars have relatively small vertical velocities, but gain momentum in
 the vertical direction over time.
 Although the cause of orbital heating is not well understood, interactions
-with giant molecular clouds and spiral arms are thought to play an important
+with giant molecular clouds are thought to play an important
 role \racomment{(citations)}.
 Although the velocity of any individual star will only provide a weak age
 constraint, the velocity dispersion of a group of stars can indicate whether,
